[gd_scene load_steps=2 format=3 uid="uid://cuhdbb7cxn701"]

[ext_resource type="Script" uid="uid://cjk2h4g4tlu52" path="res://ui/scene_select_ui.gd" id="1_n1cv7"]

[node name="Scene Select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n1cv7")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.5
offset_top = -188.5
offset_right = 188.5
offset_bottom = 188.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30
alignment = 1

[node name="inventory" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "inventory/dialogue"

[node name="temple" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "temple"

[node name="combat" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "combat"

[node name="water" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "water"

[connection signal="pressed" from="PanelContainer/VBoxContainer/inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/temple" to="." method="_on_temple_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/combat" to="." method="_on_combat_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/water" to="." method="_on_water_pressed"]
